--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <py-config>
   {
     "files": {
-      "day1.txt": "day1.txt"
+      "day1.txt": "day1.txt",
+      "day2.txt": "day2.txt"
     }
   }
   </py-config>      
@@ -24,7 +25,7 @@
   <div id="tmp"></div>
 
   <script>
-    const LAST = 1;
+    const LAST = 2;
 
     for (let day = 1; day <= LAST; day++) {
       days.add(new Option(`Day ${day}`, `day${day}`));
