Day 3: Rucksack Reorganization

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   {
     "files": {
       "day1.txt": "day1.txt",
-      "day2.txt": "day2.txt"
+      "day2.txt": "day2.txt",
+      "day3.txt": "day3.txt"
     }
   }
   </py-config>      
@@ -25,7 +26,7 @@
   <div id="tmp"></div>
 
   <script>
-    const LAST = 2;
+    const LAST = 3;
 
     for (let day = 1; day <= LAST; day++) {
       days.add(new Option(`Day ${day}`, `day${day}`));
