Remove functools dependency

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <py-config>
   {
     "files": {
+      "utils.py": "utils.py",
       "day1.txt": "day1.txt",
       "day2.txt": "day2.txt",
       "day3.txt": "day3.txt"
