Day 10: Cathode-Ray Tube

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <pre><code id="output"></code></pre>
 
   <script>
-    const LAST = 9;
-    const FILES = ["utils.py"];
+    const LAST = 10;
+    const FILES = ["utils.py", "day10.test.txt"];
 
     for (let day = 1; day <= LAST; day++) {
       days.add(new Option(`Day ${day}`, `day${day}`));
